# capabilities_spillover

./: ._CSP Toolkit_ Codebase Development Plan.md  .gitignore  AGENTS.md  CSP Toolkit_ Codebase Development Plan.md  Home.py  IMPLEMENTATION_PLAN.md  LICENSE  README.md  csp.db  pyproject.toml
apps/autoRater/: .gitignore  AGENTS.md  README.md  Uncertainty.md  analysis.md  package.json  projectDescription.md  rubric_v2.yaml
apps/openalex_downloader/: .gitignore  AGENTS.md  README.md  download_openalex.py  download_targeted.sh  hybrid_lookup.py  import_openalex.py  local_openalex.py  openalex_crawler.py  requirements.txt  run.py  runHybrid.py
apps/scorecard/: app.py  components.py
csp/: ._scripts  __init__.py  config.py
csp/data/: __init__.py  crud.py  db.py  models.py
csp/graph/: __init__.py  analysis.py  core.py  metrics.py
csp/ingest/: __init__.py  adapters.py  core.py  mock_adapter.py  openalex.py  semantic_scholar.py
csp/labeling/: __init__.py  audit.py  core.py  llm.py  rules.py
csp/reports/: __init__.py  core.py  figures.py  policy_brief.py
csp/rubric/: __init__.py  loader.py  reliability.py  rubric_v1.yaml
csp/schemas/: __init__.py  csp_score.schema.json  label_record.schema.json  (+3 more)
data_sample/: mock_csp_data.json
pages/: 1_Scorecard.py  2_Paper_Map.py
scripts/: build_case_study.py  refresh_all.py  refresh_pipeline.py  run_case_study_pipeline.py
tests/: test_final.py  test_graph.py  test_graph_analysis.py  test_ingest.py  test_labeling.py  test_openalex.py  test_reports.py  test_rubric.py  test_schemas.py  test_storage.py  test_survey.py
(+32 files in other folders)
