[project]
name = "csp-toolkit"
version = "0.1.0"
description = "Capability Spillover Potential (CSP) Toolkit"
readme = "AGENTS.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.21.0",
  "pyyaml>=6.0.1",
  "streamlit>=1.31.0",
  "pandas>=2.0.0",
  "sqlalchemy>=2.0.0",
  "requests>=2.31.0",
  "networkx>=3.0",
  "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
